docs: avoid tooltip clipping

--- a/.docs/.sphinx/_static/project_specific.css
+++ b/.docs/.sphinx/_static/project_specific.css
@@ -44,12 +44,13 @@
   display: none;
   position: absolute;
   bottom: 100%;
-  left: 50%;
+  right: 0;
   background-color: #EBEBEB;
   color: #000000;
   padding: 5px;
   border-radius: 5px;
-  white-space: nowrap;
+  width: max-content;
+  max-width: 20em;
 }
 .tag-div:hover .tag-tooltip {
   display: block;
